--- a/lesson04/assignment/index.html
+++ b/lesson04/assignment/index.html
@@ -5,11 +5,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <script src="https://kit.fontawesome.com/4b01e0c907.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800&display=swap" rel="stylesheet">
+  <title>SPIFF stories</title>
 </head>
 <body>
-  <main class="main">
-
+<!-- Begin header area -->
+  <!-- Navigation -->
+  <div class="wrapper">
+  <div class="nav" id="nav">
+  <a href="javascript:void(0)" class="close" onclick="closeNav()">&times;</a>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Fun</a></li>
+  </ul>
+</div>
+  <span class="open" id="open" onclick="openNav()">&#9776;</span>
+  </div>
+<!-- Logo -->
+<div class="logo"><a href="index.html"><img src="images/spiff-logo.svg" alt="SPIFF logo - it's working great"></a></div>
+<!-- Begin main content -->
+<main class="main">
+<!-- Headline -->
+<h1>Our stories</h1>
+<h2>Mauris vel est lacinia, porta magna mattis, mattis sem. Orci.</h2>
+<!-- Begin stories -->
+  <article class="stories">
+  <h3>Story 1</h3>
+  <p>Praesent mollis hendrerit consequat. Duis pretium nisl interdum, dignissim velit a, fringilla velit. Aliquam sagittis dignissim tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed lectus arcu, mattis ut nulla quis, eleifend vulputate metus. Aliquam risus ex, rhoncus vel semper ut, finibus nec velit. Donec consequat magna urna, vel pharetra magna dictum et. Praesent a pellentesque erat. Sed rhoncus erat eu quam commodo semper. Praesent sollicitudin faucibus vestibulum.</p>
+  <h3>Story 2</h3>
+    <p>Morbi accumsan nisi risus, eu tincidunt eros scelerisque at. Etiam sed mauris volutpat, sollicitudin justo eget, auctor nisl. Praesent volutpat, nunc porta efficitur vestibulum, est odio sollicitudin lorem, eget rhoncus leo ex non metus. Vestibulum fermentum ac tellus nec condimentum. Aenean cursus purus eget magna aliquam luctus. Donec massa dui, iaculis at orci id, placerat aliquam quam.</p>
+  <h3>Story 3</h3>
+  <p>Nullam ex nulla, consequat et rutrum vitae, fermentum ut orci. Mauris euismod quam est, a tincidunt sem maximus eget. Pellentesque pretium dui ut aliquam semper. Phasellus luctus quis turpis id sagittis. Morbi ut urna magna. Donec tempus maximus velit, ornare sagittis quam rutrum in. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed tincidunt varius arcu, eu aliquam ligula auctor et. Donec vitae congue felis. Fusce aliquet semper erat, non efficitur leo rhoncus et. In nisi tortor, rutrum at dolor et, aliquet rutrum risus. Sed a augue ipsum. Aenean aliquet vestibulum eros et elementum. Sed vulputate, magna in ornare sollicitudin, lorem diam accumsan lacus, vel venenatis nulla tortor eu sem. In hac habitasse platea dictumst.</p>
+  <h3>Story 4</h3>
+  <p>Phasellus molestie, tellus nec tincidunt venenatis, lectus ante efficitur tellus, id aliquet mauris nibh in ipsum. Donec in fringilla neque. Morbi at ante feugiat, aliquet tortor ac, malesuada ex. Mauris augue enim, cursus at urna vel, ultrices pretium diam. Integer a bibendum leo, ut sollicitudin lectus. Ut commodo dictum pretium. Donec et iaculis metus. Nullam sit amet varius quam, ut pellentesque ex. Nulla dignissim venenatis accumsan.</p>
+  <h3>Story 5</h3>
+  <p>Praesent faucibus mauris vitae erat egestas, non pretium nulla malesuada. In vehicula dolor tincidunt felis pulvinar convallis. Etiam luctus risus justo. Sed in rhoncus turpis. Praesent sagittis dictum ultricies. Ut nibh magna, convallis eu ex nec, bibendum condimentum quam. Donec interdum lorem non mollis auctor. Nam consectetur metus non orci mollis, nec hendrerit lectus ultricies.</p>
+  <h3>Story 6</h3>
+  <p>Nunc scelerisque velit eget enim cursus ultricies. Nulla molestie quis nunc id molestie. Sed egestas enim id leo venenatis faucibus. Proin egestas odio neque, in malesuada enim pharetra vitae. Duis a est nec augue finibus egestas. Cras quis rhoncus nisl. Nunc et sem turpis. Integer tortor leo, porttitor sed imperdiet vitae, euismod quis diam.</p>
+</article>
   </main>
+  <script type="text/javascript" src="scripts.js">
+  </script>
 </body>
 </html>
