--- a/lesson05/assignment/index.html
+++ b/lesson05/assignment/index.html
@@ -8,8 +8,22 @@
         <title>Assignment 05 - CSS Grid</title>
     </head>
     <body>
-        <main class="main">
-          
-        </main>
+      <main class="main">
+        <div class="grid-container">
+          <div class="header">Header</div>
+          <div class="nav">
+            <ul>
+              <li>Nav item</li>
+              <li>Nav item</li>
+              <li>Nav item</li>
+              <li>Nav item</li>
+              <li>Nav item</li>
+            </ul>
+          </div>
+          <div class="sidebar">Sidebar</div>
+          <div class="main-content">Main Content</div>
+          <div class="footer">Footer</div>
+        </div>
+      </main>
     </body>
 </html>
