--- a/lesson05/assignment/index.html
+++ b/lesson05/assignment/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="stylesheet" href="css/style.css" />
-        <title>Assignment 05 - CSS Grid</title>
-    </head>
-    <body>
-      <main class="main">
-        <div class="grid-container">
-          <div class="header">Header</div>
-          <div class="nav">
+  <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <link rel="stylesheet" href="css/style.css" />
+      <title>Assignment 05 - CSS Grid</title>
+  </head>
+  <body>
+    <main class="main">
+      <!-- Start of grid -->
+      <div class="grid-container">
+        <!-- Start header -->
+        <div class="header">Header</div>
+        <!-- Start navigation -->
+        <div class="nav">
             <ul>
               <li>Nav item</li>
               <li>Nav item</li>
@@ -20,10 +23,13 @@
               <li>Nav item</li>
             </ul>
           </div>
-          <div class="sidebar">Sidebar</div>
-          <div class="main-content">Main Content</div>
-          <div class="footer">Footer</div>
-        </div>
-      </main>
-    </body>
+        <!-- Start sidebar -->
+        <div class="sidebar">Sidebar</div>
+        <!-- Start main content -->
+        <div class="main-content">Main Content</div>
+        <!-- Start footer -->
+        <div class="footer">Footer</div>
+      </div>
+    </main>
+  </body>
 </html>
